# meal-macro-tracker

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  db.py  main.py  store.py
backend/app/models/: base.py  exercise.py  health.py  nutrition.py  supplement.py  training.py  user.py  water.py
backend/app/prompts/: scan.py
backend/app/routers/: bloodwork.py  cycle.py  exercise.py  foods.py  log.py  measurements.py  races.py  scan.py  supplements.py  training.py  user.py  water.py
backend/app/services/: calories.py  cycle.py  met.py  net_calories.py  rag.py  supplements.py  usda.py  vision_router.py  water_goal.py
backend/tests/: test_api_bloodwork.py  test_api_cycle.py  test_api_exercise.py  test_api_foods.py  test_api_log.py  test_api_measurements.py  test_api_meta.py  test_api_races.py  test_api_scan.py  test_api_supplements.py  test_api_training.py  test_api_user.py  test_api_water.py  test_calories.py  test_cycle.py  test_net_calories.py  test_supplements.py  test_water_goal.py
db/: schema.sql
docs/: BUILD_LOG.md  PRD.md
mobile/: App.tsx  README.md  app.json  package-lock.json  package.json
mobile/ios/: Podfile
mobile/ios/FitnessTracker/: FitnessTracker.entitlements  Info.plist
mobile/ios/FitnessTracker.xcodeproj/: project.pbxproj
mobile/patches/: react-native-health+1.19.0.patch
mobile/src/api/: client.ts  endpoints.ts
mobile/src/components/: CalorieRing.tsx  ExerciseLog.tsx  MacroBars.tsx  MealSection.tsx  MicronutrientRow.tsx  SupplementChecklist.tsx  WaterTracker.tsx
watch/: README.md
(+17 files in other folders)
